--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@github.com:container-interop/compiler-interop.git"
+            "url": "git@github.com:moufmouf/compiler-interop.git"
         },
         {
             "type": "vcs",
@@ -24,13 +24,13 @@
         }
     },
     "require": {
-        "container-interop/compiler-interop": "dev-master",
+        "container-interop/compiler-interop": "~0.1.0",
         "container-interop/container-interop": "~1.0",
         "mouf/picotainer": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
-        "mouf/common-container-definitions": "~1.0"
+        "mouf/common-container-definitions": "~0.1.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
