--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "TheCodingMachine\\Yaco\\": "src/"
+            "TheCodingMachine\\Yaco\\": "tests/"
         }
     },
     "require": {
