--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,9 @@
     },
     "require": {
         "container-interop/definition-interop": "dev-master",
-        "container-interop/container-interop": "~1.0",
-        "mouf/picotainer": "~1.0"
+        "container-interop/container-interop": "^1.0",
+        "jeremeamia/superclosure": "^2.0",
+        "mouf/picotainer": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.0",
