--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         },
         {
             "type": "vcs",
-            "url": "git@github.com:moufmouf/assembly.git"
+            "url": "git@github.com:mnapoli/assembly.git"
         }
     ],
     "name": "thecodingmachine/yaco",
@@ -31,7 +31,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
-        "mnapoli/assembly": "dev-methodcall_constructor",
+        "mnapoli/assembly": "dev-master",
         "satooshi/php-coveralls": "dev-master"
     },
     "minimum-stability": "dev",
