--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,16 @@
         }
     },
     "require": {
-        "container-interop/definition-interop": "~0.1.0",
+        "container-interop/definition-interop": "~0.2.0",
         "container-interop/container-interop": "^1.0",
         "jeremeamia/superclosure": "^2.0",
         "mouf/picotainer": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
-        "mnapoli/assembly": "~0.1.0",
+        "mnapoli/assembly": "dev-master",
         "satooshi/php-coveralls": "dev-master",
-        "container-interop/definition-interop-compiler-test-suite": "~0.1.0"
+        "container-interop/definition-interop-compiler-test-suite": "dev-master"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
