--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "container-interop/container-interop": "^1.0",
         "jeremeamia/superclosure": "^2.0",
         "mouf/picotainer": "^1.0",
-        "container-interop/service-provider": "~0.2.0",
-        "puli/discovery": "^1.0-beta9@beta"
+        "thecodingmachine/service-provider-registry": "^1.0"
     },
     "repositories": [
         {
