--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
- - 7.0
  - 7.1
 
 before_script:
@@ -10,7 +9,8 @@ before_script:
 
 script:
  - mkdir -p build/logs
- - phpunit --coverage-clover build/logs/clover.xml
+ - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+ - vendor/bin/phpstan analyse -l 7 src/
 
 after_script:
  - php vendor/bin/coveralls -v
