--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     },
     "require": {
+        "php": ">=7.1",
         "container-interop/definition-interop": "~0.2.0",
         "container-interop/container-interop": "^1.0",
         "jeremeamia/superclosure": "^2.0",
@@ -32,7 +33,8 @@
         "phpunit/phpunit": "~4.5",
         "mnapoli/assembly": "dev-callable-service-providers as dev-master",
         "satooshi/php-coveralls": "^1.0",
-        "container-interop/definition-interop-tests": "dev-master"
+        "container-interop/definition-interop-tests": "dev-master",
+        "phpstan/phpstan": "^0.8"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
